package com.sigae.api.model.entity;

public enum TraceabilityEventType {
  CREATED,
  UPDATED,
  CONDITION_CHANGED,
  LOCATION_CHANGED,
  DECOMMISSIONED
}
